<resources>
    <string name="app_name">수정띵</string>
    <string name="toolbar_mypage">마이 페이지</string>
    <string name="toolbar_chatroom">채팅방</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--loginpage-->
    <string name="회원가입로그인"><u>회원가입</u></string>
    <string name="학번">학번</string>

    <!--signuppage-->
    <string name="조건"><u>성신여자대학교 이메일로만 회원가입이 가능합니다.</u></string>
    <string name="이메일주소">이메일 주소</string>
    <string name="이메일주소힌트">20XX1111</string>
    <string name="성신메일">@sungshin.ac.kr</string>
    <string name="별명">별명</string>
    <string name="별명힌트">귀여운수룡이</string>
    <string name="비밀번호">비밀번호</string>
    <string name="비밀번호확인">비밀번호 확인</string>
    <string name="중복확인">중복 확인</string>
    <string name="인증메일전송">인증메일전송</string>
    <string name="회원가입">회원가입</string>

    <!--mypage-->
    <string name="사용자명">{별명} 님</string>
    <string name="홈바로가기">홈 바로가기</string>
    <string name="내가쓴글">내가 쓴 글</string>
    <string name="찜키워드설정">찜 / 키워드 설정</string>
    <string name="비밀번호변경">비밀번호 변경</string>

    <!--chatroom-->
    <string name="말풍선예시">안녕하세요, 롤 휴지 12개 필요한데 32개짜리 사서 나눌 분 구합니다.</string>
    <string name="말풍선예시2">저는 5개 정도만 있으면 됩니다. 혹시 더 필요하신 분 있을까요??</string>
    <string name="전송">전송</string>
    <string name="말풍선예시3">저 12개 있으면 좋을 거 같습니다.</string>
    <string name="입장"><u>{별명}님이 입장하셨습니다.</u></string>
    <string name="말풍선예시4">한 분 더 들어오셨네요. 저희 이제 구매 가능한 개수가 3개 남았는데 괜찮으신가요?</string>
    <string name="title_activity_my_page">myPage</string>

    <!--주희-->
    <string name="게시글제목">게시글 제목</string>
    <string name="내가설정한키워드">내가 설정한 키워드</string>
    <string name="키워드입력">키워드 입력</string>
    <string name="키워드">#키워드</string>
    <string name="확인">확인</string>
    <string name="현재비밀번호입력">현재 비밀번호 입력</string>
    <string name="변경할비밀번호입력">변경할 비밀번호 입력</string>
    <string name="변경">변경</string>

    <!--상단바-->
    <string name="뒤로가기">뒤로 가기</string>

    <!--write-->
    <string name="댓글">댓글:</string>
    <string name="입력">입력</string>
</resources>