<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"


android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".mypage.Mypage">

<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbar"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mypage_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deepgreen"
        android:theme="@style/Theme.Sujungdding.NoActionBar"
        app:popupTheme="@style/Theme.Sujungdding.PopupOverlay"></androidx.appcompat.widget.Toolbar>

</com.google.android.material.appbar.AppBarLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mypage_nickname"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/mypagename"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="0dp"
        android:text="@string/사용자명"
        android:textColor="#000000"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/mypagemenu"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/mypage_gohome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/mypagemenuline"
            android:clickable="true"
            android:paddingBottom="5dp"
            android:text="@string/홈바로가기"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mypage_myboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/mypagemenuline"
            android:clickable="true"
            android:paddingBottom="5dp"
            android:text="@string/내가쓴글"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/mypage_keywd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/mypagemenuline"
            android:clickable="true"
            android:paddingBottom="5dp"
            android:text="@string/찜키워드설정"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/mypage_pwdchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/mypagemenuline"
            android:paddingBottom="5dp"
            android:text="@string/비밀번호변경"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>


</LinearLayout>
