<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    tools:context=".signup.Signup">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dfef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deepgreen"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="10dp"
            android:padding="30dp"
            android:paddingBottom="0dp"
            android:text="@string/조건"
            android:textSize="18sp"
            android:textStyle="italic"
            android:typeface="normal" />

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="327dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="30dp"

            android:background="@drawable/loginpageinput"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="15dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:layout_marginStart="9dp"
                    android:layout_marginLeft="9dp"
                    android:background="@drawable/loginpage"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/이메일주소"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.029"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.64" />

                <EditText
                    android:id="@+id/signup_id"
                    android:layout_width="185dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/lightgrey"
                    android:ems="10"
                    android:hint="@string/이메일주소힌트"
                    android:inputType="textPersonName"
                    android:paddingLeft="5dp"
                    android:textColor="#737373"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/signup_emailvf"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="#FFFFFF"
                    android:includeFontPadding="false"
                    android:text="@string/인증메일전송"
                    android:textColor="@color/black"
                    android:textSize="6sp"
                    app:backgroundTint="@color/lightgrey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="51dp"
                    android:layout_marginLeft="51dp"
                    android:background="@drawable/loginpage"
                    android:gravity="center_horizontal"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/별명"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/signup_nickname"
                    android:layout_width="185dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/lightgrey"
                    android:ems="10"
                    android:hint="@string/별명힌트"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/signup_nicknamedb"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/중복확인"
                    android:textColor="@color/black"
                    android:textSize="6sp"
                    app:backgroundTint="@color/lightgrey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="26dp"
                    android:layout_marginLeft="26dp"
                    android:background="@drawable/loginpage"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/비밀번호"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/signup_pwd"
                    android:layout_width="185dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/lightgrey"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:paddingLeft="8dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="-2dp"
                    android:layout_marginLeft="0dp"
                    android:background="@drawable/loginpage"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/비밀번호확인"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/signup_pwdcheck"
                    android:layout_width="185dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/lightgrey"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp" />
            </LinearLayout>

            <Button
                android:id="@+id/signup_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/회원가입"
                android:textColor="#000000"
                app:backgroundTint="@color/lightgreen" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>