<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".mypage.Passwordchage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/passwordchage_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deepgreen"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.Sujungdding.NoActionBar"
        app:popupTheme="@style/Theme.Sujungdding.PopupOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="169dp">

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="현재 비밀번호 입력"
            android:text="@string/현재비밀번호입력"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E5E5E5"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="변경할 비밀번호 입력"
            android:text="@string/변경할비밀번호입력"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#E5E5E5"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="#000000" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="비밀번호 확인"
            android:text="@string/비밀번호확인"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/password3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E5E5E5"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:padding="5dp" />

    </LinearLayout>

    <Button
        android:id="@+id/pwdchangebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/lightgreen"
        android:text="@string/변경"
        android:textColor="@color/black"
        app:cornerRadius="10dp" />


</LinearLayout>