<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Setting">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deepgreen"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.Sujungdding.NoActionBar"
        app:navigationIcon="@drawable/abc_vector_test"
        app:popupTheme="@style/Theme.Sujungdding.PopupOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp">

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/round_corner"
        android:orientation="vertical">

        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/star" />
        </LinearLayout>

        <TextView
            android:id="@+id/Text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/keywordline"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:text="@string/게시글제목"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/keywordline"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:text="@string/게시글제목"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/round_corner"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="6dp"
            android:text="@string/내가설정한키워드"
            android:textColor="#000000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/round_corner"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/keyword"
                android:layout_width="288dp"
                android:layout_height="28dp"
                android:background="@drawable/circle_tool"
                android:hint="    키워드 입력"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:textColorHint="#978D8D"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/lightgreen"
                android:text="@string/키워드"
                android:textColor="@color/black" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/lightgreen"
                android:text="@string/키워드"
                android:textColor="@color/black" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
